# ngehtsim-weather-builder

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: example.toml
docs/: architecture.md  legacy-zarr-schema.md
legacy/: README.md  Telescope_Site_Matrix.csv  daily_postproc.py  generate_many.py  postproc_ray.py
src/ngehtsim_weather_builder/: __init__.py  cli.py  dataset.py  importer.py  legacy.py  manifest.py  validation.py
tests/: test_dataset.py  test_legacy.py  test_legacy_daily_postproc.py  test_package.py  test_validation.py
