[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ngehtsim-weather-builder"
version = "0.1.0"
description = "Builder for versioned ngehtsim atmospheric weather datasets"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "Smithsonian Institution"}]
dependencies = [
    "numpy>=1.26",
    "zarr>=3.1,<3.2",
]

[project.optional-dependencies]
pipeline = [
    "netCDF4>=1.6",
    "pandas>=2.1",
    "scipy>=1.11",
]
cluster = ["ray>=2.30"]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
